--- a/homepage2.html
+++ b/homepage2.html
@@ -113,7 +113,7 @@
                 class="w-8 h-8 rounded-full"
               />
               <span>Jane Doe</span>
-              <span class="material-symbols-outlined">expand_more</span>
+              <span class="material-symbols-outlined"></span>
             </button>
 
             <!-- Dropdown Menu -->
@@ -124,10 +124,14 @@
               <a href="dashboard.html" class="block px-4 py-2 hover:bg-gray-700"
                 >Profile</a
               >
-              <a href="#" class="block px-4 py-2 hover:bg-gray-700"
+              <a
+                href="leaderboard.html"
+                class="block px-4 py-2 hover:bg-gray-700"
                 >Leaderboard</a
               >
-              <a href="#" class="block px-4 py-2 hover:bg-gray-700"
+              <a
+                href="helpandsupport.html"
+                class="block px-4 py-2 hover:bg-gray-700"
                 >Help & Support</a
               >
               <a href="#" class="block px-4 py-2 hover:bg-gray-700">Logout</a>
