--- a/news.html
+++ b/news.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>News - Gamify</title>
     <link rel="stylesheet" href="news.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="logo-modified-removebg-preview.png"
+    />
   </head>
   <body>
     <div class="container">
@@ -96,7 +102,7 @@
 
       <!-- Navigation -->
       <div class="nav">
-        <a href="index.html">← Back to Homepage</a>
+        <a href="homepage2.html">← Back to Homepage</a>
       </div>
     </div>
   </body>
