--- a/homepage2.html
+++ b/homepage2.html
@@ -71,10 +71,10 @@
             >Modules 📑</a
           >
           <a
-            href="calender.html"
+            href="calendar.html"
             class="menu-item block py-2 px-3 rounded hover:bg-gray-700 transition"
             data-page="games"
-            >Calender 🗓️</a
+            >Calendar 🗓️</a
           >
         </nav>
       </aside>
@@ -595,3 +595,4 @@
     </script>
   </body>
 </html>
+
