--- a/homepage2.html
+++ b/homepage2.html
@@ -38,6 +38,8 @@
           />
           <h1 class="text-xl font-bold">Greenify</h1>
         </div>
+
+        <!-- Menu -->
         <nav class="flex-1 py-2">
           <a
             href="#"
@@ -48,35 +50,47 @@
           <a
             href="games.html"
             class="menu-item block py-2 px-3 rounded hover:bg-gray-700 transition"
-            data-page="games"
             >Games 🎮</a
           >
           <a
             href="quiz.html"
             class="menu-item block py-2 px-3 rounded hover:bg-gray-700 transition"
-            data-page="games"
             >Quizzes 🧩</a
           >
-
+          <a
+            href="leaderboard.html"
+            class="menu-item block py-2 px-3 rounded hover:bg-gray-700 transition"
+            >Leaderboard 🛹</a
+          >
           <a
             href="news.html"
             class="menu-item block py-2 px-3 rounded hover:bg-gray-700 transition"
-            data-page="games"
             >News 📰</a
           >
           <a
             href="modules.html"
             class="menu-item block py-2 px-3 rounded hover:bg-gray-700 transition"
-            data-page="games"
             >Modules 📑</a
           >
           <a
             href="calender.html"
             class="menu-item block py-2 px-3 rounded hover:bg-gray-700 transition"
-            data-page="games"
             >Calender 🗓️</a
           >
         </nav>
+
+        <!-- Back to Index Button -->
+
+        <div
+          class="absolute bottom-6 left-1/2 transform -translate-x-1/2 w-11/12"
+        >
+          <a
+            href="index.html"
+            class="block text-center bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-lg transition"
+          >
+            ⬅ Back to Home
+          </a>
+        </div>
       </aside>
 
       <!-- Main Content -->
@@ -120,11 +134,11 @@
               <a href="dashboard.html" class="block px-4 py-2 hover:bg-gray-700"
                 >Profile</a
               >
-              <a
+              <!-- <a
                 href="leaderboard.html"
                 class="block px-4 py-2 hover:bg-gray-700"
                 >Leaderboard</a
-              >
+              > -->
               <a
                 href="helpandsupport.html"
                 class="block px-4 py-2 hover:bg-gray-700"
