--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <div class="image-content">
           <img
-            src="what_is_greenify-removebg-preview.png"
+            src="what is greenify.png"
             alt="A vibrant image representing the Greenify platform"
           />
         </div>
@@ -272,3 +272,4 @@
     </script>
   </body>
 </html>
+
