--- a/homepage2.html
+++ b/homepage2.html
@@ -68,9 +68,9 @@
             >News 📰</a
           >
           <a
-            href="modules.html"
+            href="modulecontent.html"
             class="menu-item block py-2 px-3 rounded hover:bg-gray-700 transition"
-            >Modules 📑</a
+            >Modules 📑 </a
           >
           <a
             href="calender.html"
@@ -624,3 +624,4 @@
     </script>
   </body>
 </html>
+
