--- a/modulecontent.html
+++ b/modulecontent.html
@@ -160,19 +160,24 @@
                     <!-- File Upload Section -->
                     <div class="rounded-2xl shadow-lg p-6 bg-white dark:bg-gray-800">
                         <h3 class="text-xl font-semibold mb-4 text-green-800 dark:text-green-300">
-                            Share Environmental Files
+                         Environmental Files
                         </h3>
                         
                         <label class="file-upload-area flex flex-col items-center justify-center w-full h-32 border-2 border-dashed rounded-lg cursor-pointer border-green-300 hover:border-green-500 bg-green-50 dark:border-gray-600 dark:hover:border-green-500 dark:bg-gray-700">
-                            <div class="flex flex-col items-center justify-center pt-5 pb-6">
-                                <i class="lucide lucide-upload w-8 h-8 mb-3 text-green-600 dark:text-green-400"></i>
-                                <p class="mb-2 text-sm text-gray-500 dark:text-gray-400">
-                                    <span class="font-semibold">Click to upload</span> or drag and drop
-                                </p>
-                                <p class="text-xs text-gray-400 dark:text-gray-500">
-                                    PDF, DOCX, images (MAX. 10MB each)
-                                </p>
-                            </div>
+                           <div class="text-center">
+                                <i class="lucide lucide-upload-cloud text-4xl mb-2 text-green-600 dark:text-green-300"></i>
+                                <p class="text-green-800 dark:text-gray-300">
+                                 <div>   
+                                <a href="Water-Pollution-in-India-A-Crisis-Threatening-Millions (1).pdf"> 1. Water Pollution </a>
+                                <br >
+                                <a href="Air-Pollution-in-India-Causes-Effects-and-Solutions.pdf"> 2. Air Pollution</a>
+                                <br>
+                                <a href="Climate-Change-in-India-Causes-Effects-and-Solutions.pdf"> 3. Climate Change</a>
+                                <br>
+                                <a href="Deforestation-in-India-Causes-Effects-and-Solutions.pdf"> 4. Deforestation</a>
+                                <br>
+                                <a href="dustbin.html"> 5. Waste Management</a>
+                                 </div>
                             <input 
                                 type="file" 
                                 class="hidden" 
