--- a/homepage2.html
+++ b/homepage2.html
@@ -21,7 +21,7 @@
     <!-- <button
       class="menu-toggle fixed top-4 left-4 z-50 bg-gray-800 text-white p-2 rounded md:hidden"
     >
-      ☰
+      Menu 
     </button> -->
 
     <div class="relative flex size-full min-h-screen">
@@ -73,7 +73,7 @@
             >Modules 📑 </a
           >
           <a
-            href="calender.html"
+            href="calender .html.html"
             class="menu-item block py-2 px-3 rounded hover:bg-gray-700 transition"
             >Calender 🗓️</a
           >
@@ -624,4 +624,5 @@
     </script>
   </body>
 </html>
+
 
