--- a/homepage2.html
+++ b/homepage2.html
@@ -73,7 +73,7 @@
             >Modules 📑 </a
           >
           <a
-            href="calender .html.html"
+            href="calendar.html"
             class="menu-item block py-2 px-3 rounded hover:bg-gray-700 transition"
             >Calender 🗓️</a
           >
@@ -624,5 +624,6 @@
     </script>
   </body>
 </html>
+
 
 
