--- a/homepage2.html
+++ b/homepage2.html
@@ -68,7 +68,7 @@
             >News 📰</a
           >
           <a
-            href="modulecontent2.html"
+            href="modulecontent2.HTML"
             class="menu-item block py-2 px-3 rounded hover:bg-gray-700 transition"
             >Modules 📑 </a
           >
@@ -624,6 +624,7 @@
     </script>
   </body>
 </html>
+
 
 
 
