--- a/module3.html
+++ b/module3.html
@@ -112,7 +112,7 @@
                             </div>
                         </div>
                         </a>
-                        <a href="#">
+                        <a href="dustbin.html">
                         <div
                             class="flex flex-col gap-4 rounded-lg bg-white shadow-sm hover:shadow-lg transition-shadow duration-300 overflow-hidden group">
                             <div class="w-full h-48 bg-center bg-no-repeat bg-cover"
@@ -142,4 +142,5 @@
 
 
 </html>
+
 
