--- a/module3.html
+++ b/module3.html
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                         </a>
-                        <a href="#">
+                        <a href="The-Global-Impact-of-Cutting-Trees-Why-India-Matters (1).pdf">
                         <div
                             class="flex flex-col gap-4 rounded-lg bg-white shadow-sm hover:shadow-lg transition-shadow duration-300 overflow-hidden group">
                             <div class="w-full h-48 bg-center bg-no-repeat bg-cover"
@@ -112,7 +112,7 @@
                             </div>
                         </div>
                         </a>
-                        <a href="dustbin.html">
+                        <a href="Understanding-the-3-Main-Types-of-Dustbins-in-India.pdf">
                         <div
                             class="flex flex-col gap-4 rounded-lg bg-white shadow-sm hover:shadow-lg transition-shadow duration-300 overflow-hidden group">
                             <div class="w-full h-48 bg-center bg-no-repeat bg-cover"
@@ -142,5 +142,6 @@
 
 
 </html>
+
 
 
