--- a/module3.html
+++ b/module3.html
@@ -43,9 +43,11 @@
                             notifications
                         </span>
                     </button>
+                    <a href="dashboard.html">
                     <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10"
                         style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCYfMTj8o7WOXq-lS2FvzwUiCRCJNmpwiG2XZqhQf7ERpNCZV4gIoCNLDtL2Lr7rBclKZtZTHiGOvCTHY62OXsRhLnGeBer2KwP4_6phx1KTVGwDYioMaICqkq3rJHo4OmdzrFZ86WOckGgEYBUMihIG_ZTPowhHTrfYRULniAW5OUJ8hmSrN3CwH3sVy1DTtpfkc8jB0y25I-9uNoz6oxfVuJ6PTpM0CJjCA-Oi5PyiLLI9QbbbOEgxNo8DKX_EqAShIMAekNqju8");'>
                     </div>
+                    </a>
                 </div>
             </header>
             
@@ -142,6 +144,7 @@
 
 
 </html>
+
 
 
 
