--- a/module3.html
+++ b/module3.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="flex flex-1 justify-center gap-12 text-[#374137]">
                     <a class="text-base font-medium leading-normal hover:text-[var(--primary-color)] transition-colors"
-                        href="#">Home</a>
+                        href="homepage2.html"> Home</a>
                     <a class="text-base font-medium leading-normal text-[var(--primary-color)]" href="#">Modules</a>
                 </div>
                 <div class="flex items-center gap-4">
@@ -144,6 +144,7 @@
 
 
 </html>
+
 
 
 
