--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <nav class="navigation" id="navMenu">
         <a href="home.html">Home</a>
         <a href="signup.html">Signup</a>
-        <a href="terms.html">About</a>
+        <a href="about.html">About</a>
       </nav>
 
       <!-- Theme Toggle Button -->
@@ -272,4 +272,5 @@
     </script>
   </body>
 </html>
+
 
