--- a/about.html
+++ b/about.html
@@ -24,10 +24,12 @@
         <div class="flex flex-1 justify-end gap-6 items-center">
           <nav class="flex items-center gap-6">
           </nav>
+          <a href="index.html">
           <button
             class="flex min-w-[90px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-11 px-5 bg-green-600 text-white text-base font-bold tracking-wide shadow-sm hover:bg-green-700 transition-colors">
             <span class="truncate">Home</span>
           </button>
+          </a>
         </div>
       </header>
       <main class="flex-1">
@@ -176,5 +178,6 @@
     </div>
   </div>
 </body>
+
 
 </html>
