--- a/module3.html
+++ b/module3.html
@@ -74,7 +74,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="Air-Pollution-A-Global-Crisis-with-an-Indian-Epicenter.pdf">
                         <div
         
                             class="flex flex-col gap-4 rounded-lg bg-white shadow-sm hover:shadow-lg transition-shadow duration-300 overflow-hidden group">
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                         </a>
-                        <a href="#">
+                        <a href="Climate-Change-Global-Crisis-and-Indias-Challenge.pdf">
                         <div
                             class="flex flex-col gap-4 rounded-lg bg-white shadow-sm hover:shadow-lg transition-shadow duration-300 overflow-hidden group">
                             <div class="w-full h-48 bg-center bg-no-repeat bg-cover"
@@ -144,6 +144,7 @@
 
 
 </html>
+
 
 
 
