--- a/module3.html
+++ b/module3.html
@@ -65,7 +65,7 @@
                         <div
                             class="flex flex-col gap-4 rounded-lg bg-white shadow-sm hover:shadow-lg transition-shadow duration-300 overflow-hidden group">
                             <div class="w-full h-48 bg-center bg-no-repeat bg-cover"
-                                style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBtb4ICY-HxJsPpCOFgCSl1yJ3ciKRNBt3v87PgflrdIqZ3V-9n47LyBMQhpfjJuXPd9bZttFekoDaAR5NP-EGIE1X1-w578rtVJ78Mgf6_jOYgKEphqEsL9Lh95oLeGFnONkXPMcSccQWvieWDw1_roeSq_oiGdjWxanaKrmoiaMcLXqCjCM_HQn6YpOOry6QQ6GB7UNrSsdAO4aYsc5RFe51mOlirVJECShJ9KvNMJfdsPPs5BL442nQzZ04T81tr3qiIO85n_9I");'>
+                                style='background-image: url("water2.jpeg");'>
                             </div>
                             <div class="p-5 flex flex-col flex-1 gap-2">
                                 <h3 class="text-[#111811] text-lg font-bold">Water Pollution </h3>
@@ -79,7 +79,7 @@
         
                             class="flex flex-col gap-4 rounded-lg bg-white shadow-sm hover:shadow-lg transition-shadow duration-300 overflow-hidden group">
                             <div class="w-full h-48 bg-center bg-no-repeat bg-cover"
-                                style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDn7YaUEhQSHPVjoYsues7rxqHS2hJ1z9SIVmYCDNb8qbkWdJ7wQT91TwdNmsT6IhnLMNMTwr7pWi9uJTlH_Gj-w7sSKt7ko6QhJnFj0tl_aTosVTXh6YydClUsIB7eviEpWWwaRHk8dpi_M1GU6MlW4y-FWpXmuzYmmly0Bx1mdZq1EjSYrgeVqlChJWga8PEIm1xR_UfCQz88t7CkJT8svHnIXk65s7_BHnR0lySlcw6-8tlK9pb560dg3wVAZSy2Cs2u2lE3NfQ");'>
+                                style='background-image: url("air pollution.jpg");'>
                             </div>
                             <div class="p-5 flex flex-col flex-1 gap-2">
                                 <h3 class="text-[#111811] text-lg font-bold">Air Pollution</h3>
@@ -92,7 +92,7 @@
                         <div
                             class="flex flex-col gap-4 rounded-lg bg-white shadow-sm hover:shadow-lg transition-shadow duration-300 overflow-hidden group">
                             <div class="w-full h-48 bg-center bg-no-repeat bg-cover"
-                                style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAEBYnS1BJLT0uaUgmCtK7EuP4kJ-Pfkq3kfaGo7hulEkAmJw6juLrCVqI1g1jX1aO7lN53zsHZyr-lbcR1tIDdt9S5eQptZFXWO5qd88Wb3Z9EuFB8S6_DOvflIL2xRMydtmVxLn-nFbyTdmmck34BOK6uARhIbcvHenDRlZBcFT2W3YHq3flnDyfJr9WNjv00Xdi8qCJmdAadqrL07oqDfvtUgiDzZEQE7p6D7X5aMYHrOg86GosoJXbTT8nlX4G8YxXFz0Aeubs");'>
+                                style='background-image: url("climate.jpeg");'>
                             </div>
                             <div class="p-5 flex flex-col flex-1 gap-2">
                                 <h3 class="text-[#111811] text-lg font-bold">Climate Change</h3>
@@ -105,7 +105,7 @@
                         <div
                             class="flex flex-col gap-4 rounded-lg bg-white shadow-sm hover:shadow-lg transition-shadow duration-300 overflow-hidden group">
                             <div class="w-full h-48 bg-center bg-no-repeat bg-cover"
-                                style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCtV3ntJXafOiRdShV99jCo4MefsWII1wWJH7pm6L2qPt8EmFJ5C7225ntB_XC_9dHw9t3sf1C4UqUtyKzaeXg72WMYc0hZ_bMFBZriHEdwPVsiBfoV4rJdu-sth5uznzhfTLANaMoavrfiAmjGhZ8caPvSb_O1lLR5k-qdCBwr55s98hhJCVIvQtxMS33dRG2KXIpH7P2qL6OPSpJ662IIxuKEc4k3BukLeDFvf0Xs3fKLXvfgaUx7HY4HZe-7lm4PXpoUl-qBab4");'>
+                                style='background-image: url("deforest.jpg");'>
                             </div>
                             <div class="p-5 flex flex-col flex-1 gap-2">
                                 <h3 class="text-[#111811] text-lg font-bold">Deforestation</h3>
@@ -118,7 +118,7 @@
                         <div
                             class="flex flex-col gap-4 rounded-lg bg-white shadow-sm hover:shadow-lg transition-shadow duration-300 overflow-hidden group">
                             <div class="w-full h-48 bg-center bg-no-repeat bg-cover"
-                                style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuC7TZuPj7qeLA-3_4F7ZnZOthbsoLG_B0ouO1nJtsjjHgvlCv0R8lBsWiuMx6-EmUpENA3Hf0KNvCE42OrT-uLHbqkRSb-HEKeSlOFWs7GDJxVKc-o3NoI8eQRaEl4jk1bFqBi9xO6fvkyv45z9hkIRe7oeST4AOny4wAHY4e3P_OCI5t75FSQhbDZJYhZcxug18YRPx2ymB93ALITPG4ayAOj-CtR4kSX5qKgshAkVMa46zYmrzpDkxiDhMhx2acKPUqj0Xsgv43c");'>
+                                style='background-image: url("waste2.jpeg");'>
                             </div>
                             <div class="p-5 flex flex-col flex-1 gap-2">
                                 <h3 class="text-[#111811] text-lg font-bold">Waste Management</h3>
@@ -144,6 +144,7 @@
 
 
 </html>
+
 
 
 
